// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowMetadata - private mode renders correctly 1`] = `
<WorkflowMetadata
  api={
    Object {
      "setWorkflowPublic": [MockFunction],
    }
  }
  isPublic={false}
  test_now={2017-09-20T21:03:52.000Z}
  workflow={
    Object {
      "id": 100,
      "last_update": 1505941432000,
      "owner_name": "Harry Harrison",
      "public": false,
      "read_only": false,
    }
  }
>
  <div>
    <ul
      className="WF-meta"
    >
      <li
        className="WF-meta--item content-3 t-m-gray attribution"
      >
        <span
          className="content-3 t-m-gray"
        >
          by 
          Harry Harrison
        </span>
        <span
          className="content-3 metadataSeparator t-m-gray"
        >
          -
        </span>
      </li>
      <li
        className="WF-meta--item content-3 t-m-gray"
      >
        Updated 
        now
      </li>
      <li
        className="WF-meta--item content-3 t-m-gray"
      >
        <div
          className="WF-meta--item test-button"
          onClick={[Function]}
        >
          <div
            className="content-3 metadataSeparator t-m-gray"
          >
            -
          </div>
          <div
            className="t-f-blue"
          >
            private
          </div>
        </div>
      </li>
    </ul>
  </div>
</WorkflowMetadata>
`;

exports[`WorkflowMetadata - private mode renders correctly in read-only mode 1`] = `
<WorkflowMetadata
  api={
    Object {
      "setWorkflowPublic": [MockFunction],
    }
  }
  isPublic={true}
  test_now={2017-09-20T21:03:52.000Z}
  workflow={
    Object {
      "id": 100,
      "last_update": 1505941432000,
      "owner_name": "Harry Harrison",
      "public": true,
      "read_only": true,
    }
  }
>
  <div>
    <ul
      className="WF-meta"
    >
      <li
        className="WF-meta--item content-3 t-m-gray attribution"
      >
        <span
          className="content-3 t-m-gray"
        >
          by 
          Harry Harrison
        </span>
        <span
          className="content-3 metadataSeparator t-m-gray"
        >
          -
        </span>
      </li>
      <li
        className="WF-meta--item content-3 t-m-gray"
      >
        Updated 
        now
      </li>
      <li
        className="WF-meta--item content-3 t-m-gray"
      />
    </ul>
  </div>
</WorkflowMetadata>
`;
